--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "tc-asset-management",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "g": "prisma generate"
+    "g": "prisma generate",
+    "r": "tsx index.ts"
   },
   "author": "",
   "license": "ISC",
